# robotic_dog_clone

./: mini_cheetah.urdf.xacro  package.xml  setup.cfg  setup.py
.claude/: settings.local.json
config/: nav2_params.yaml  ps4_controller.yaml  robot_params.yaml  ros2_controllers.yaml  rviz_nav.rviz  slam_params.yaml  xbox_controller.yaml
docs/: kinematics_conventions.md
dog/: autonomous_bridge_node.py  calibration_node.py  controller_node.py  gait_generator.py  gait_node.py  gps_node.py  ik_validation_node.py  imu_node.py  keyboard_leg_node.py  keyboard_node.py  kinematics.py  leg_joy_node.py  leg_test_node.py  open_loop_smoke_test_node.py  robot_config.py  sim_bridge_node.py  state_manager.py  step_test_node.py  step_test_node_claude.py  torque_monitor_node.py
launch/: autonomous_launch.py  calibration_launch.py  dog_launch.py  leg_test_launch.py  stand_launch.py
teensy_firmware/PlatformIO/Projects/micro_ros_teensy41/: platformio.ini
teensy_firmware/PlatformIO/Projects/micro_ros_teensy41/src/: main.cpp
urdf/: dog.urdf.xacro
urdf/meshes/: base_link.STL  base_link_collisional.STL  leg1_lower_link.STL  leg1_lower_link_collisional.STL  leg1_upper_link.STL  leg1_upper_link_collisional.STL  leg2_lower_link.STL  leg2_lower_link_collisional.STL  leg2_upper_link.STL  leg2_upper_link_collisional.STL  leg3_lower_link.STL  leg3_lower_link_collisional.STL  leg3_upper_link.STL  leg3_upper_link_collisional.STL  leg4_lower_link.STL  leg4_lower_link_collisional.STL  leg4_upper_link.STL  leg4_upper_link_collisional.STL
worlds/: empty.sdf  nav_test.sdf
